# ng-application-builder

./: .gitignore  BUILD  MODULE.bazel  README.md  angular.json  defs.bzl  package.json  pnpm-lock.yaml  test-setup.ts  tsconfig.json  tsconfig.spec.json  vitest.config.ts
src/: app.ts  index.html  main.ts
